test/compile_errors/stage1/obj/ignored_statement_value.zig
export fn foo() void {
    1;
}

// ignored statement value
//
// tmp.zig:2:5: error: expression value is ignored
